--- a/web-client-acceptance-test/build.gradle
+++ b/web-client-acceptance-test/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'org.gebish:geb-core:0.12.2'
     compile 'org.slf4j:slf4j-simple:1.7.12'
     compile 'com.outr.javasysmon:javasysmon_2.10:0.3.4'
+    compile 'org.codehaus.groovy.modules.http-builder:http-builder:0.7.1'
 }
 
 task runAcceptanceTests(type: Test) {
