--- a/service/requirements.txt
+++ b/service/requirements.txt
@@ -1,6 +1,7 @@
 doubles == 1.1.3
 Flask == 0.10.1
 flask-cors == 2.1.0
+pymongo == 3.0.3
 pytest == 2.8.2
 pytest-pythonpath == 0.7
 googlemaps == 2.3
