--- a/web-client/package.json
+++ b/web-client/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "angular": "1.4.7",
     "angular-google-maps": "2.2.1",
+    "angucomplete-alt": "2.0.2",
     "jquery": "2.1.4",
     "lodash": "3.10.1",
 
